mod6/ingress/ingressClass.yaml
# Namespace Scope ではないので、インストラクターが事前に 1回だけ作成する
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: awesome-class
spec:
  controller: ingress.k8s.aws/alb
