mod6/ingress/ingress-alb-instance.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-ingress
  namespace: student99
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: python-web-ec2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-alb-instance
  namespace: student99
  annotations:
    spec.ingressClassName: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-065aee05309cf8eb5,subnet-00eff6949d17b478c,subnet-0bded49c868af0677
spec:
  ingressClassName: awesome-class
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service-ingress
                port:
                  number: 80
